k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    version: 'k8s1'
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: 'k8s1'
  template:
    metadata:
      labels:
        app: frontend
        version: 'k8s1'
    spec:
      containers:
        - image: midoblgsm/react-products:k8s1
          name: web
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
