k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: products
    version: 'k8s1'
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
      version: 'k8s1'
  template:
    metadata:
      labels:
        app: products
        version: 'k8s1'
    spec:
      containers:
        - image: midoblgsm/go-products:k8s1
          name: products
          ports:
            - containerPort: 9999
          imagePullPolicy: Always
