k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: 'http'
      port: 8989
      targetPort: 80
  selector:
    app: frontend
