k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: products
  name: products
spec:
  ports:
    - name: '9999'
      nodePort: 32262
      port: 9999
      targetPort: 9999
  type: NodePort
  selector:
    app: products
