k8s/ratings-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ratings
  name: ratings
spec:
  ports:
    - name: '9998'
      port: 9998
      targetPort: 9998
  selector:
    app: ratings
