k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - host: products.example
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 8989
